--- a/index.html
+++ b/index.html
@@ -37,9 +37,53 @@
         </div>
     </div>
     </div>
+    <div class="fotos">
+        <figure class="gallery__item gallery__item--1">
+            <img src="Imagens/headset.png" class="gallery__img" alt="Image 1">
+          </figure>
+          <figure class="gallery__item gallery__item--2">
+            <img src="Imagens/teclado.png" class="gallery__img" alt="Image 2">
+          </figure>
+          <figure class="gallery__item gallery__item--3">
+            <img src="Imagens/monitor.png" class="gallery__img" alt="Image 3">
+          </figure>
+          <figure class="gallery__item gallery__item--4">
+            <img src="Imagens/entregas.png" class="gallery__img" alt="Image 4">
+          </figure>
+          <figure class="gallery__item gallery__item--5">
+            <img src="Imagens/super_preco.png" class="gallery__img" alt="Image 5">
+          </figure>
+          <figure class="gallery__item gallery__item--6">
+            <img src="Imagens/joystick.png" class="gallery__img" alt="Image 6">
+          </figure>
+          <figure class="gallery__item gallery__item--7">
+            <img src="Imagens/mouse.png" class="gallery__img" alt="Image 6">
+          </figure>
+          <figure class="gallery__item gallery__item--8">
+            <img src="Imagens/cadeira.png" class="gallery__img" alt="Image 6">
+          </figure>
+          <div class="text1">HEADSET</div>
+          <div class="text2">TECLADO</div>
+          <div class="text3">MONITOR</div>
+          <div class="text4">joystick</div>
+          <div class="text5">mouse</div>
+          <div class="text6">cadeira</div>
+    </div>
     
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<footer>
+    <div class="footer-content">
+        <img src="Imagens/LOGO.png" class="logo" alt="logo game mania">
+        <img src="Imagens/Vector.png" class="vector" alt="logo game mania">
+        <img src="Imagens/facebook 1.png" class="facebook1" alt="logo game mania">
+        <img src="Imagens/local.png" class="local" alt="logo game mania">
+        <p>
+            telefone
+        </p>
+    </div>
+   
+</footer>
+
 </body>
 
 </html>
